added workflow script

--- a/.github/workflows/boolean-dispatch.yml
+++ b/.github/workflows/boolean-dispatch.yml
@@ -86,6 +86,11 @@ jobs:
       working-directory: ${{ env.WORK_DIR }}
 
     - name: Debug deploy_infra
+      if: ${{ github.event.inputs.deploy_infra }}
       run: |
         echo "deploy_infra value: ${{ github.event.inputs.deploy_infra }}"
+
+    - name: Debug destroy_infra
+      if: ${{ github.event.inputs.destroy_infra }}
+      run: |
         echo "destroy_infra value: ${{ github.event.inputs.destroy_infra }}"
