--- a/.github/workflows/string-dispatch.yml
+++ b/.github/workflows/string-dispatch.yml
@@ -15,6 +15,7 @@ on:
         required: true
         type: string
         default: 'deploy'
+        choices: ['deploy', 'destroy']
 
 jobs:
   terraform:
@@ -78,4 +79,3 @@ jobs:
         
         terraform destroy -auto-approve
       working-directory: ${{ env.WORK_DIR }}
-      
